Update favicon to automation icon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>Okasha Omar | N8N Automation Specialist</title>
     <meta name="description" content="Okasha Omar - Expert N8N Automation Specialist. Transform your business with custom workflow automation using Cursor, Lovable, and AntiGravity. 2+ years experience, 100+ workflows built." />
     <meta name="keywords" content="N8N, automation, workflow, Okasha Omar, Cursor, Lovable, AntiGravity, LinkedIn Lead Gen, automation specialist" />
